# cpp-util

./: .gitignore  CMakeLists.txt  custom_concepts.h  main.cpp  util.h
include/: executor.h  util.h
src/: util.cpp
